--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,3 +1,7 @@
-<h1>Is this working???</h1>
-<h1><%= @question %></h1>
-<h2><%= Date.today %></h2>
+<h1>Stupid Coaching</h1>
+
+<p><%= @question %></p>
+<p>-You</p>
+
+<p><%= @answer %></p>
+<p>-Your coach</p>
