--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,12 @@
-<form action="/answer" data-turbo="false">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
-</form>
+
+
+<container class="container ps-4">
+  <h1>Stewpid Coaching</h1>
+  <p>Ask your coach anything, but remember he's really stupid</p>
+  <form action="/answer" data-turbo="false">
+    <input type="text" name="question" class="form-control">
+    <input type="submit" value="Ask!" class = "btn btn-primary">
+  </form>
+</container>
+
+<p></p>
